[tool.poetry]
name = "hookah-space-bot"
version = "0.1.0"
description = ""
authors = ["daniel <4aba3691@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.10"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
